<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools">

<data>
    <variable
        name="flightSearchViewModel"
        type="com.example.flightsearch.flightsearch.FlightSearchViewModel" />
</data>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/car_color"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginBottom="15dp"
            android:text="@string/search_for_the_flight"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/origin_stations_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/origin_station_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:hint="@string/origin_station"
            android:inputType="text"
            android:text="@={flightSearchViewModel.inputOrigin}"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/destination_station_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:hint="@string/destination_station"
            android:inputType="text"
            android:text="@={flightSearchViewModel.inputDestination}"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/departure_date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:hint="@string/departure_date"
            android:inputType="text"
            android:text="@={flightSearchViewModel.inputDepartureDate}"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/number_of_adults_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:hint="@string/number_of_adults"
            android:text="@={flightSearchViewModel.inputNoOfAdults}"
            android:inputType="numberDecimal"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/number_of_teens_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:hint="@string/number_of_teens"
            android:text="@={flightSearchViewModel.inputNoOfTeens}"
            android:inputType="numberDecimal"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/number_of_children_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:hint="@string/number_of_children"
            android:inputType="numberDecimal"
            android:text="@={flightSearchViewModel.inputNoOfChildren}"
            android:minHeight="48dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/save_button"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()-> flightSearchViewModel.searchTheFlight()}"
            android:text="@string/search" />

    </LinearLayout>
</ScrollView>

</layout>